--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -12,5 +12,8 @@
     "akashtube"
   ],
   "author": "Akash Giri",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "nodemon": "^3.1.10"
+  }
 }
