Initialize backend project with Prettier configuration and essential files

--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.0",
   "description": "We are creating the backend part of youtube and it is the bigger version of youtube",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon src/index.js"
   },
   "keywords": [
     "youtube",
@@ -14,6 +15,7 @@
   "author": "Akash Giri",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "prettier": "^3.5.3"
   }
 }
